<resources>
    <string name="app_name">Habit Tracker</string>


    <string name="edit_text_email">e-mail</string>
    <string name="edit_text_password">Contraseña</string>
    <string name="button_signup">Registrar</string>
    <string name="button_login">Ingresar</string>

    <string name="text_view_email">e-mail</string>
    <string name="text_view_provider">Proveedor</string>
    <string name="button_closesesion">Cerrar Sesión</string>

    <string name="def_web_client_id">760574212877-fs9pgmfvajeo9sv7ogjnno0bqqot7ol8.apps.googleusercontent.com</string>
    <string name="htcol_intro">Habit Tracker Colombia</string>

    <string name="facebook_app_id">428727968665232</string>
    <string name="fb_login_protocol_scheme">fb428727968665232</string>

    <string name="profile">Perfil</string>
    <string name="search">Búsqueda</string>
    <string name="content_description_search">Búsqueda descripción</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="content_description_logout">CerrarSesión Descripción</string>
    <string name="content_description_profile">Perfil Descripción</string>
    <string name="content_description_btn_push_ups">Ir a las flexiones</string>
    <string name="content_description_btn_maps">Ir al mapa</string>

    <string name="icon_home">Inicio</string>
    <string name="icon_chart">Herramientas</string>
    <string name="icon_shop">Tienda</string>
    <string name="icon_settings">Configuración</string>
    <string name="support">Nosotros</string>
    <string name="user_name">User Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_view_home">Bienvenidos a Habit Tracker</string>
    <string name="text_view_profile">Este es el Perfil</string>
    <string name="text_view_tools">Herramientas</string>
    <string name="text_view_help">Esta es la Ayuda</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="accountant">0</string>
    <string name="text_view_logout">¿Seguro deseas cerrar sesión?</string>
    <string name="ok">OK</string>
    <string name="yes">SI</string>
    <string name="no">NO</string>
    <string name="push_ups">Realizar flexiones</string>
    <string name="easy_routine">Fácil</string>
    <string name="touch_here">TOCA AQUÍ</string>
    <string name="half_routine">Medio</string>
    <string name="advanced_routine">Avanzado</string>

    <string name="edit_text_name_first">nombres</string>
    <string name="edit_text_name_last">apellidos</string>
    <string name="edit_text_phone">teléfono</string>
    <string name="edit_text_address">dirección</string>
    <string name="btn_get">VER</string>
    <string name="btn_set">GUARDAR</string>
    <string name="btn_delete">ELIMINAR</string>

    <string name="done">done</string>
    <string name="locations">Ubicaciones útiles</string>
    <string name="add_your_habit8">Agrega tu habito</string>
    <string name="add_your_habit9">Agrega tu habito</string>
    <string name="habit1_water">Toma agua</string>
    <string name="habit2_read">Lee un poco</string>
    <string name="habit3_wakeupEarly">Despierta temprano</string>
    <string name="habit4_push">Realiza flexiones</string>
    <string name="habit5_newLanguage">Aprende un nuevo idioma</string>
    <string name="habit6_dairy">Escribe un diario</string>
    <string name="habit7_floss">Usa Seda dental</string>
    <string name="add_your_habit">Agrega tu hábito</string>
    <string name="personalize_habits">Personaliza tus Hábitos</string>
    <string name="btn_save">Guardar</string>

    <string name="lbl_fragment_home">Inicio</string>
    <string name="lbl_fragment_profile">Perfil</string>
    <string name="lbl_fragment_tools">Herramientas</string>
    <string name="lbl_fragment_store">Tienda</string>
    <string name="lbl_fragment_about_us">Sobre nosotros</string>
    <string name="lbl_fragment_logout">Cerrar sesión</string>

    <string name="content_help1">\"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?\"</string>
    <string name="edit_text_habit_name">Nombre</string>
    <string name="edit_text_habit_description">Descripción</string>
    <string name="edit_text_habit_category">Categoría</string>
    <string name="btn_goHabitsForm">Ir a Formulario de hábitos</string>
    <string name="btn_goHabitsList">Ir a Lista de Hábitos</string>

    <string name="success_on_save">Datos guardados con éxito</string>
    <string name="failure_on_save">Error en guardado de datos</string>

    <string name="failure_on_get">Error al realizar la consulta</string>
    <string name="habit_name_example">Ejemplo Nombre Hábito</string>
    <string name="habit_category_example">Ejemplo Categoría Hábito</string>
    <string name="cloud">Obtener</string>
    <string name="create">Crear</string>

    <string name="icon_aboutus">Nosotros</string>
    <string name="text_view_aboutus">Esto es Sobre Nosotros</string>
    <string name="all_fields">Aségurate de rellenar TODOS los campos</string>
    <string name="tv_save_habit">Guarda tu hábito personalizado</string>
    <string name="about_our">Habit Tracker es una app pensada para que cada uno de nuestros
    usuarios adopten hábitos de vida saludables, dadas las multiples funciones que se encuentran en
        la app. Sus creadores, son la segunda generación de tripulantes de Misión TIC; quienes
        ofrecen una aplicación totalmente funcional, gratuita y abierta al público.

    </string>
    <string name="btn_goTodayHabits">Ir a Hábitos Cumplidos Hoy</string>
    <string name="Home_message">Con nuestra app podrás llevar registro de tus hábitos...¡la forma más sencilla de motivarte a continuar!</string>
    <string name="btn_addHabitsToDB">Añadir habitos a BD</string>

</resources>