<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuProfile"
        android:contentDescription="@string/content_description_profile"
        android:title="@string/profile" />
    <!--android:icon="@drawable/ic_favorite_24dp"-->

    <item
        android:id="@+id/menuSearch"
        android:title="@string/search"
        android:contentDescription="@string/content_description_search"/>
    <!--android:icon="@drawable/ic_search_24dp"-->

    <item android:id="@+id/menuHome"
        android:icon="@drawable/ic_home"
        android:title="@string/icon_home"/>

    <item android:id="@+id/menuCharts"
        android:icon="@drawable/ic_chart"
        android:title="@string/icon_chart"/>

    <item android:id="@+id/menuShop"
        android:icon="@drawable/ic_shop"
        android:title="@string/icon_shop"/>

    <item android:id="@+id/menuSettings"
        android:icon="@drawable/ic_settings"
        android:title="@string/icon_settings"/>

    <item android:id="@+id/menuSupport"
        android:title="@string/support"/>

    <item
        android:id="@+id/menuLogout"
        android:title="@string/logout"
        android:contentDescription="@string/content_description_logout" />

</menu>