<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    app:startDestination="@id/menuHome">

    <fragment
        android:id="@+id/menuProfile"
        android:name="com.misiontic.habit_tracker.ProfileFragment"
        android:label="@string/lbl_fragment_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/menuHome"
        android:name="com.misiontic.habit_tracker.HomeFragment"
        android:label="@string/lbl_fragment_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/menuCharts"
        android:name="com.misiontic.habit_tracker.ToolsFragment"
        android:label="@string/lbl_fragment_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/menuLogout"
        android:name="com.misiontic.habit_tracker.LogoutFragment"
        android:label="@string/lbl_fragment_logout"
        tools:layout="@layout/fragment_logout" />

    <fragment
        android:id="@+id/menuAboutUs"
        android:name="com.misiontic.habit_tracker.AboutUsFragment"
        android:label="@string/lbl_fragment_about_us"
        tools:layout="@layout/fragment_about_us" />


</navigation>