<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListActivity">

    <LinearLayout
        android:id="@+id/layoutCheckList"
        android:layout_width="283dp"
        android:layout_height="425dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6">

        <CheckBox
            android:id="@+id/cbHabit1Water"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/habit1_water" />

        <CheckBox
            android:id="@+id/cbHabit2Read"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/habit2_read" />

        <CheckBox
            android:id="@+id/cbHabit3Wake"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/habit3_wakeupEarly" />

        <CheckBox
            android:id="@+id/cbHabit4Push"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/habit4_push" />

        <CheckBox
            android:id="@+id/cbHabit5Language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/habit5_newLanguage" />

        <CheckBox
            android:id="@+id/cbHabit6Dairy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/habit6_dairy" />

        <CheckBox
            android:id="@+id/cbHabit7Floss"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/habit7_floss" />

        <EditText
            android:id="@+id/txtAddHabit8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/add_your_habit8"
            android:inputType="text"
            tools:layout_editor_absoluteX="64dp"
            tools:layout_editor_absoluteY="530dp" />

        <EditText
            android:id="@+id/txtAddHabit9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/add_your_habit9"
            android:inputType="text" />

    </LinearLayout>


    <!-- Main content -->

    <LinearLayout
        android:id="@+id/layoutTittleList"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/primaryLightColor"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.004">

        <TextView
            android:id="@+id/tvListTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa_bold"
            android:text="@string/personalize_habits"
            android:textAlignment="center"
            android:textColor="@color/secondaryTextColor"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/tvListInstructions"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:fontFamily="@font/comfortaa"
            android:text="Elige 3 habitos que quieras implementar, o agrega uno propio"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_save"
        tools:layout_editor_absoluteX="154dp"
        tools:layout_editor_absoluteY="642dp" />


</androidx.constraintlayout.widget.ConstraintLayout>