<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ToolsFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/tvTools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/text_view_tools"
        android:textAlignment="center"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/push_ups"
                android:textSize="20sp"
                android:layout_weight="2"
                android:fontFamily="@font/comfortaa"
                android:layout_marginTop="24dp" />

            <ImageButton
                android:id="@+id/btnPushUps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_weight="0.15"
                android:backgroundTint="@color/primaryDarkColor"
                android:minHeight="48dp"
                android:src="?attr/actionModePasteDrawable"
                tools:ignore="SpeakableTextPresentCheck"
                android:contentDescription="@string/content_description_btn_push_ups" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/locations"
                android:textSize="20sp"
                android:fontFamily="@font/comfortaa"
                android:layout_weight="2"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="130dp"/>

            <ImageButton
                android:id="@+id/btnMaps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:backgroundTint="@color/primaryDarkColor"
                android:minHeight="48dp"
                android:src="@android:drawable/ic_dialog_map"
                tools:ignore="SpeakableTextPresentCheck"
                android:contentDescription="@string/content_description_btn_maps" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>